--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ beautifulsoup4 = "^4.12.3"
 lxml = "^5.2.1"
 jsonlines = "^4.0.0"
 fastapi = "^0.111.0"
+asyncio = "^3.4.3"
+aiohttp = "^3.9.5"
+tqdm = "^4.66.4"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.8.0"
